syntax = "proto3";

package com.z.model.proto;

import "common_user.proto";
//用户消息==============

//注册  返回-10002
message  C_10001 {
  string phone = 1;//手机号码
  string pwd=2;//用户密码
  string deviceId=3;//设备id
}
message S_10002{
  int64 uid=1;
  string name = 2;//用户名称
  int32 icon = 3;//头像id
  string phone = 4;//手机号
  int64  gold=5;//用户账户-钱包金额
  int64  bankGold=6;//用户账户-银行金额
  int64  pwd=7;//密码
  bool  visitor=8;//是否是游客（true：游客）
}

//登录
message C_10003 {
  int32 type=1;//登录类型（1 游客登录，用uid 2 用户手机号登录）
  int64 uid=2; //游客登录时
  string phone=3;//用户手机号
  string pwd=4;//用户密码
  string deviceId=5;//设备id
}
message S_10004 {
  int64 uid = 1;//用户id
  UserType type=2;//用户类型
  int32 icon =3;//用户头像
  string name = 4;//用户名称
  string phone = 5;//手机号
  int64  gold=6;//用户账户-钱包金额
  int64  bankGold=7;//用户账户-银行金额
  bool  visitor=8;//是否是游客（true：游客）
}

//编辑用户信息
message C_10005 {
  ModifyUserType type = 1;//修改类型
  string name = 2;//用户名称
  int32 icon = 3;//头像id
  string phone =4;//手机号
}
//用户信息
message S_10006 {
  int64 uid=1;//用户id
  string name = 2;//用户名称
  int32 icon = 3;//头像id
  string phone = 4;//手机号
  int64  gold=5;//用户账户-钱包金额
  int64  bankGold=6;//用户账户-银行金额
}

//修改密码 --返回10008
message C_10007 {
  string pwd = 1;//老密码
}
//绑定手机 --返回10010 （废弃）
message C_10009 {
  string phone = 1;//手机号
}

//银行----------
//显示界面-显示请求10201
message C_10201 {

}
//显示界面--用于刷新金额（取出，存入后，或者刷新金额时返回）
message S_10202 {
  int64 gold =1;// 钱包金额
  int64 bankGold =2;// 银行金额
}

//取出--返回10204 并且刷新金额-10202
message C_10203 {
  int64 gold =1;// 金额
}
//存入--返回10206 并且刷新金额-10202
message C_10205 {
  int64 gold =1;// 金额
}
//转账 --》返回10208（刷新自己，对方的金额（10202））
message C_10207 {
  int64 targetId=1;//目标id
  int64 gold =2;// 金额
}

//查看转账记录
message C_10211 {
  int32 type =1;// 1 全部，2 转出 3 转入
}
message S_10212 {
  repeated TransforLog logs =1;//转账记录
}

message TransforLog{
  int64 id=1;//记录id
  int64 fromId=2;//转账id
  int64 targetId=3;//接收id
  TransferLogType type=4;//类型
  int64 gold =5;//类型
  int64 time=6;//时间
  bool state=7;//是否领取
}
//查看明细
message C_10213 {
}
//查看明细-返回
message S_10214 {
  repeated BankLog goldlogs =1;//明细列表

}
message BankLog{
  int64 id=1;//唯一id
  BankType type=2;//类型
  int64 uid=3;//
  int64 targetId=4;
  int64 gold=5; //变动金额
  int64 gold1=6;//变动前
  int64 gold2=7;//变动后
  bool state=8;//是否已经领取
  int64 lastTime=9;//时间
}
//兑换码-----------------
//请求兑换--返回10252 并且刷新金额-10202
message C_10251 {
  string code =1;// 兑换码
}

//邮件--------------
//查看邮件列表
message C_10301 {
  int32 type = 1;// 0 全部，1 未读取
}
//返回邮件列表
message S_10302 {
  int32 type = 1;// 0 全部，1 未读取
  repeated Email emails=2;//邮件列表

}
message Email{
  int64 id = 1;               // 邮件id
  EmailType type=2;           //邮件类型
  string title = 3;           // 标题
  string content = 4;         // 内容
  int64 transferId=5;         //转账id
  int64 gold = 6;             // 金额
  int64 fromId = 7;             // 来自uid
  int32 state = 8;            // 状态
  int64 createTime = 9;       // 创建时间，使用时间戳（毫秒）
  int64 updateTime = 10;      // 更新时间，使用时间戳（毫秒）
  int64 uid=11;      //邮件拥有者的id
}
//领取邮件--->返回10304 （刷新金额 10202）
message C_10303 {
  int64 id = 1;//邮件id
}

//管理界面----------------
//点卡生成 -列表
message C_10401{
}
//点卡生成 -列表-返回
message S_10402{
  repeated BindCode codes=1;
  int32 leaveCount=2;//剩余点卡数量
}
message BindCode{
  int64 uid=1;// 绑定玩家id
  string code=2;//点卡
  int64 time=3;//时间
}
//点卡生成 -生成
message C_10403{
  int64 bindUid=1;//绑定的用户id

}
//点卡生成 -生成-返回
message S_10404{
  repeated BindCode codes=1;
  int32 leaveCount=2;//剩余点卡数量
}

//点卡查询
message C_10405{
  int64 bindUid=1;//绑定的用户id （-1是查询所有人）
}
message S_10406{
  repeated UserCode codes=1;
  int32 leaveCount=2;//剩余点卡数量
}
message UserCode{
  int64 uid=1;// 绑定玩家id
  string code=2;//点卡
  int64 gold=3;//金币
  CodeState state=4;//状态
  int64 expireTime=5;//过期时间
  int64 useTime=6;//使用时间
}
//点卡分发-列表
message C_10407{
}
message S_10408{
  repeated GiveCode codes=1;
  int32 leaveCount=2;//剩余点卡数量
}
message GiveCode{
  int64 uid=1;// 绑定玩家id
  int32 count=2;//数量
  int64 time=3;//时间
}
//点卡分发-赠送
message C_10409{
  int64 giveUid=1;//赠送用户id
  int32 count=2;//赠送的数量
}
message C_10410{
  repeated GiveCode codes=1;
  int32 leaveCount=2;//剩余点卡数量
}
//查询
message C_10411{
  int64 findUid=1;//查询的用户id
}
message S_10412{
  int32 leaveCount=1;//剩余点卡数量
  int64  gold =2;//钱包金额
  int64 bankGold=3;//银行金额
  int64 gameGold=4;//游戏最近收入
  bool lock=5;//是否被锁
  repeated Email emails=6;//邮件记录
}

//查询-最近转出
message C_10413{
  int64 findUid=1;//查询的用户id
}
message S_10414{
  repeated TransforLog transferLogs=1;//转出记录
}

//查询-锁用户-返回10416
message C_10415{
  int64 lockUid=1;//用户id
}

//查询-游戏详情（待定）
message C_10417{
  int64 findUid=1;//用户id
}



